--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "Test",
   "description": "Test",
   "version": "0.0.0",
+  "engines": {
+    "node": "8.11.1",
+    "npm": "5.7.1",
+  },
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
