--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "description": "Test",
   "version": "0.0.0",
   "engines": {
-    "node": "8.11.1",
-    "npm": "5.7.1",
+    "node": "9.11.1"
   },
   "main": "index.js",
   "scripts": {
