--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "description": "Test",
   "version": "0.0.0",
   "engines": {
-    "node": "9.11.1"
+    "node": "8.10.0"
+    "npm": "5.6.0",
   },
   "main": "index.js",
   "scripts": {
