--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
-  "name": "Test",
+  "name": "Valknut",
   "description": "Test",
   "version": "0.0.0",
-  "engines": {
-    "node": "8.10.0"
-    "npm": "5.6.0",
-  },
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
